WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23461
LayoutTests/fast/js/numeric-conversion.html is broken
https://bugs.webkit.org/show_bug.cgi?id=23461
Summary
LayoutTests/fast/js/numeric-conversion.html is broken
Ivan Posva
Reported
2009-01-21 13:40:03 PST
After investigating Chromium
bug 6733
(
http://code.google.com/p/chromium/issues/detail?id=6733
) I came to the conclusion that the fix for
rdar://problem/6489314
did not go far enough. Change 39882 does correct the parsing of NaN, but left the parsing of infinite values broken when compared to Firefox, IE and Safari 3.2.1.
Attachments
Fix
(3.42 KB, patch)
2009-01-22 13:44 PST
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-01-21 15:23:42 PST
<
rdar://problem/6514842
>
Beth Dakin
Comment 2
2009-01-22 13:44:39 PST
Created
attachment 26938
[details]
Fix
Beth Dakin
Comment 3
2009-01-22 13:52:23 PST
Fixed with revision 40133.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug