JavaScriptCore:

2009-01-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23461 LayoutTests/
        fast/js/numeric-conversion.html is broken, and corresponding
        <rdar://problem/6514842>

        The basic problem here is that parseInt(Infinity) should be NaN,
        but we were returning 0. NaN matches Safari 3.2.1 and Firefox.

        * runtime/JSGlobalObjectFunctions.cpp:
        (JSC::globalFuncParseInt):

LayoutTests:

2009-01-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23461 LayoutTests/
        fast/js/numeric-conversion.html is broken, and corresponding
        <rdar://problem/6514842>

        The basic problem here is that parseInt(Infinity) should be NaN,
        but we were returning 0. NaN matches Safari 3.2.1 and Firefox.

        * fast/js/numeric-conversion-expected.txt:
        * fast/js/resources/numeric-conversion.js:



Canonical link: https://commits.webkit.org/32321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40133 268f45cc-cd09-0410-ab3c-d52691b4dbfc